# maine_mock_case_generator

./: .gitignore  .mcp.json  AI_DISCLOSURE.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  integration-manifest.json  pyproject.toml  requirements.txt
catalog/: canonical_case.schema.json  compound_matter.schema.json  ecosystem.lock.json  faker_pools.json  mock_matter.schema.json  practice_areas.json  repository-capabilities.schema.json  synthetic_document.schema.json
docs/: architecture.md  compound.md  data-model.md  integration.md  legal-issue-tiering.md  probate-fixtures.md  smoke-testing.md
examples/: adult-conservatorship.canonical.json  adult-conservatorship.matter.json  arbitration-award-dispute.canonical.json  arbitration-award-dispute.matter.json  business-asset-sale.canonical.json  business-asset-sale.matter.json  business-dissolution.canonical.json  business-dissolution.matter.json  business-formation-scorp.canonical.json  business-formation-scorp.matter.json  commercial-contract-dispute.canonical.json  commercial-contract-dispute.matter.json  commercial-property-sale.canonical.json  commercial-property-sale.matter.json  complex-civil-litigation.canonical.json  complex-civil-litigation.matter.json  condo-unit-sale.canonical.json  condo-unit-sale.matter.json  condominium-construction-dispute.canonical.json  condominium-construction-dispute.matter.json  construction-defect.canonical.json  construction-defect.matter.json  construction-loan-closing.canonical.json  construction-loan-closing.matter.json  criminal-oui.canonical.json  criminal-oui.matter.json  decedent-estate-informal.canonical.json  decedent-estate-informal.matter.json  divorce-hidden-crypto.canonical.json  divorce-hidden-crypto.matter.json  edge-boundary-dates.canonical.json  edge-boundary-dates.matter.json  edge-max-household.canonical.json  edge-max-household.matter.json  edge-money-extremes.canonical.json  edge-money-extremes.matter.json  (+64 more)
(+219 files in other folders)
