[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maine-mock-case-generator"
version = "0.2.0"
description = "Deterministic fictional legal fixtures and contract tests for the Maine forms ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Andy Bedard"}]
dependencies = ["jsonschema>=4.23,<5", "PyYAML>=6.0.2,<7"]

[project.optional-dependencies]
test = ["pytest>=8.3,<9", "hypothesis>=6.125,<7"]
mcp = ["mcp[cli]>=1.2,<2"]
documents = ["reportlab>=4.2,<5", "Pillow>=11,<13", "pypdf>=5,<7"]
dev = ["pytest>=8.3,<9", "hypothesis>=6.125,<7", "mcp[cli]>=1.2,<2", "reportlab>=4.2,<5", "Pillow>=11,<13", "pypdf>=5,<7", "build>=1.2,<2", "ruff>=0.9,<1"]

[project.scripts]
mmcg = "generator.cli:main"

[tool.setuptools]
packages = ["generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
